Refactor user edit and index pages; add profile image cropping, export to Excel functionality, and improve form handling
- Enhanced the Edit user page with profile image cropping and improved form handling using useForm.
- Updated the Index user page to include an export to Excel feature for user data.
- Modified routing for user management to ensure proper HTTP methods are used.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@heroicons/react": "^2.2.0",
         "flowbite-react": "^0.12.9",
         "react-easy-crop": "^5.5.3",
-        "react-icons": "^5.5.0"
+        "react-icons": "^5.5.0",
+        "xlsx": "^0.18.5"
     }
 }
